# ids

./: .env.example  .gitignore  README.md  dashboard_launcher.py  ids-cli.spec  ids-dashboard.spec  main.py  pyproject.toml  pytest.ini  requirements-ml.txt  requirements.txt  run.cmd  run.ps1  run_corporate_e2e_example.cmd  run_extended_tz_friday_example.cmd  run_full_tz_friday_example.cmd  run_full_tz_friday_example.ps1  run_pre_demo_smoke.cmd  run_utf8.cmd
artifacts/: ae_model.pt  ae_val_mse_baseline.json  embedding_classifier.pt  embedding_port_encoder.joblib  embedding_proto_encoder.joblib  embedding_val_acc_baseline.json  if_agg_model.joblib  if_agg_validation_baseline.json  if_model.joblib  if_validation_baseline.json  lstm_label_encoder.joblib  lstm_model.pt  lstm_val_f1_baseline.json  model_registry.json  raw_header_cnn.pt  rf_label_encoder.joblib  rf_model.joblib  rf_model_candidate.joblib
config/: cicids2017_canonical_numeric.yaml  feature_columns.yaml  settings.yaml
dashboard/: __init__.py  app.py  data_connector.py
docs/: CASE4_ACCEPTANCE_MATRIX_2026-04-24.md  FULL_PROJECT_DOCUMENTATION_RU.md  MODEL_HEALTH_AND_REPORTS.md  PERFORMANCE_BASELINE.md  QA_COMMISSION_ONE_PAGER_CASE4_2026-04-20.md  QA_EXECUTION_PLAN_2026-04-20.md  QA_FINAL_AUDIT_CASE4_2026-04-20.md  QA_READINESS_CASE4_2026-04-20.md  RESIDUAL_RISKS_CASE4_2026-04-20.md  TZ_CASE4.md  TZ_CASE4_TRACEABILITY.md  TZ_CASE4_TRACEABILITY_VERIFIED_2026-04-20.md  TZ_PRODUCTION_PIPELINE.md  online_retrain_windows.md
packaging/: README.md  build_cli.ps1
scripts/: 00_generate_demo_data.py  02_train_all.py  (+37 more)
(+294 files in other folders)
