[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ids-ml-project"
version = "0.1.0"
description = "Educational IDS with ML (university case)"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
  "pandas>=2.0.0",
  "numpy>=1.24.0",
  "scikit-learn>=1.3.0",
  "PyYAML>=6.0",
  "joblib>=1.3.0",
  "requests>=2.31.0",
]

[project.optional-dependencies]
dl = ["torch>=2.0.0"]
dashboard = ["streamlit>=1.28.0", "plotly>=5.18.0"]
all = ["torch>=2.0.0", "streamlit>=1.28.0", "plotly>=5.18.0"]

[tool.setuptools.packages.find]
include = ["src*"]
